Referencia de cadena de desigualdades (#4)

--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -395,9 +395,10 @@ Por otro lado, si nos restringimos a conjuntos totalmente autosimilares, existe 
 
 En conclusión, para un conjunto no vacío y acotado $A\subseteq\R^n$, se tiene que:
 
-$$
-\dim_T(A)\leq\dim_H(A)\leq\dim_B(A)\leq n
-$$
+\begin{equation}
+  \label{eq:desigualdades-dimensiones}
+  \dim_T(A)\leq\dim_H(A)\leq\dim_B(A)\leq n
+\end{equation}
 
 A partir de esta cadena de desigualdades, en la que notamos que la dimensión fractal, entendiendo por esta la dimensión de Hausdorff que es la más general, y que siempre excede o iguala a la dimensión topológica, podemos enunciar nuestra primera definición de fractal, que fue formulada por \textit{Benoit Mandelbrot} en \cite{alma991007242979704990}.
 
