Cambio en la notación de la dimensión por cajas (#4)

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -34,6 +34,8 @@
 \newtheorem{lema}{Lema}[section]
 
 \newcommand{\diam}[0]{\mathrm{diam}}
+\newcommand{\diminf}[0]{\underline{\dim}_B}
+\newcommand{\dimsup}[0]{\overline{\dim}_B}
 
 %MORE PACKAGES HERE
 \newcommand{\R}[0]{\mathbb{R}}
