Primeras líneas del capítulo 2 (#27)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -89,6 +89,11 @@
 
 \import{tex/capitulos/}{capitulo-1.tex}
 
+\chapter{Iteración}
+\label{chap:iteracion}
+
+\import{tex/capitulos/}{capitulo-2.tex}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERENCIAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
