Redactado hasta caso z^2-1 (#27)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -94,6 +94,10 @@
 
 \import{tex/capitulos/}{capitulo-2.tex}
 
+
+\chapter{Conjuntos de Julia y Mandelbrot}
+\label{chap:Julia-Mandelbrot}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERENCIAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
